# arch-hs

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  NAME_PRESET.hs  README.md  arch-hs.cabal  cabal.project  flake.nix  hie.yaml  stack.yaml
.github/workflows/: archlinux.yml  ci.yml
app/: Args.hs  Json.hs  Main.hs  PkgBuild.hs
cbits/: clib.c  clib.h
data/: NAME_PRESET.json
diff/: Args.hs  Diff.hs  Main.hs
rdepcheck/: Args.hs  Check.hs  Main.hs
src/: ArchHs.hs  Aur.hs  Community.hs  Core.hs  Hackage.hs  Local.hs  OptionParse.hs  PkgBuild.hs  PkgDesc.hs  Types.hs  Utils.hs
src/Data/Aeson/: Ext.hs
src/Distribution/ArchHs/: Alpm.hs  Aur.hs  Community.hs  CommunityDB.hs  CommunityFiles.hs  Compat.hs  Core.hs  DepCheck.hs  Exception.hs  ExtraDB.hs  FilesDB.hs  Hackage.hs  Local.hs  Name.hs  OptionReader.hs  Options.hs  PP.hs  PkgBuild.hs  PkgDesc.hs  RDepCheck.hs  Types.hs  Utils.hs
src/Distribution/ArchHs/Alpm/: Types.hsc
src/Distribution/ArchHs/Internal/: NameLoader.hs  NamePresetLoader.hs  Prelude.hs
src/Polysemy/: Req.hs
submit/: Main.hs  Submit.hs
sync/: Args.hs  Check.hs  Main.hs  Submit.hs  Utils.hs
sync/Submit/: CSV.hs
test/: Main.hs
uusi/: Main.hs
