cabal-version:       2.4
name:                arch-hs
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/berberman/arch-hs
bug-reports:         https://github.com/berberman/arch-hs/issues
license:             MIT
license-file:        LICENSE
author:              berberman
maintainer:          berberman <1793913507@qq.com>
copyright:           2020 berberman
category:            Distribution
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/berberman/arch-hs.git
common common-options
  build-depends:       base ^>= 4.13.0.0,
                       Cabal, 
                       req, 
                       hackage-db, 
                       conduit, 
                       containers, 
                       deepseq, 
                       algebraic-graphs,
                       megaparsec, 
                       directory, 
                       bytestring, 
                       tar-conduit, 
                       conduit-extra, 
                       split, 
                       neat-interpolation, 
                       text, 
                       microlens,
                       microlens-th,
                       polysemy

  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -O2 
                       -flate-specialise 
                       -fspecialise-aggressively
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  DataKinds
                       FlexibleContexts
                       GADTs
                       LambdaCase
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeApplications
                       TypeOperators
                       TypeFamilies
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Aur, PkgDesc, Community, Core, Hackage, Local, PkgBuild, Types, Utils
executable arch-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       arch-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N