cabal-version:       2.4
name:                arch-hs
version:             0.0.0.0
synopsis:            A program generating PKGBUILD for hackage packages.
description:         
    @arch-hs@ is a command-line program, which simplifies the process of producing
    and maintaining haskell packages for archlinux distribution by automating the
    PKGBUILD generation with the dependency resolving and template filling. Packagers should follow the
    <https://wiki.archlinux.org/index.php/Haskell_package_guidelines Haskell package guidelines>.
homepage:            https://github.com/berberman/arch-hs
bug-reports:         https://github.com/berberman/arch-hs/issues
license:             MIT
license-file:        LICENSE
author:              berberman
maintainer:          berberman <1793913507@qq.com>
copyright:           2020 berberman
category:            Distribution
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/berberman/arch-hs.git
common common-options
  build-depends:       base ^>= 4.14.0.0,
                       Cabal ^>= 3.2.0.0, 
                       aeson,
                       req, 
                       hackage-db, 
                       conduit, 
                       containers, 
                       deepseq,
                       algebraic-graphs,
                       megaparsec, 
                       directory, 
                       bytestring, 
                       tar-conduit, 
                       conduit-extra, 
                       split, 
                       neat-interpolation, 
                       text, 
                       microlens,
                       microlens-th,
                       polysemy,
                       filepath,
                       colourista ^>= 0.1,
                       template-haskell

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -O2 
                       -flate-specialise 
                       -fspecialise-aggressively
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  DataKinds
                       FlexibleContexts
                       GADTs
                       LambdaCase
                       PolyKinds
                       RankNTypes
                       ScopedTypeVariables
                       TypeApplications
                       TypeOperators
                       TypeFamilies
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Distribution.ArchHs.Aur,
                       Distribution.ArchHs.PkgDesc,
                       Distribution.ArchHs.Community,
                       Distribution.ArchHs.Core,
                       Distribution.ArchHs.Hackage,
                       Distribution.ArchHs.Local,
                       Distribution.ArchHs.PkgBuild,
                       Distribution.ArchHs.Types,
                       Distribution.ArchHs.Utils,
                       Data.Aeson.Ext,
                       Polysemy.Req

executable arch-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Args
  build-depends:       arch-hs, optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable arch-hs-diff
  import:              common-options
  hs-source-dirs:      diff
  main-is:             Main.hs
  other-modules:       Diff
  build-depends:       arch-hs, optparse-applicative
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N